Remove floats, clears, overflows, fixed heights and change font sizes and line heights from px to em

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
 /****** BASE STYLES ******/
+html {
+    font-size: 16px;
+}
 
 body {
+    min-height: 100vh;
     color: #000000;
     font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
 }
 
 /****** GRID ******/
@@ -10,24 +15,21 @@ body {
 .full-width {
     margin: 0 auto;
     width: 1200px;
-    overflow: auto;
 }
 
 .half-width {
-    float: left;
     width: 600px;
 }
 
 .third-width {
-    float: left;
     width: 338px;
 }
 
 /****** HEADER ******/
 
 header h1 {
-    font-size: 30px;
-    line-height: 23px;
+    font-size: 1.875em;
+    line-height: 1.438em;
     margin: 48px 0 40px 0;
     text-transform: uppercase;
 }
@@ -37,7 +39,6 @@ header h1 span {
 }
 
 nav {
-    float: left;
     margin: 33px 0 0 0;
 }
 
@@ -47,7 +48,7 @@ nav ul li {
 
 nav ul li a {
     color: #77a466;
-    font-size: 14px;
+    font-size: 0.875em;
     font-weight: 700;
     padding-left: 24px;
     text-decoration: none;
@@ -63,28 +64,27 @@ nav ul li a {
 
 #top-sec h2 {
     color: #77a466;
-    font-size: 18px;
-    line-height: 23px;
+    font-size: 1.125em;
+    line-height: 1.438em;
     margin: 25px auto;
     text-transform: uppercase;
 }
 
 #top-sec p {
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 1em;
+    line-height: 1.563em;
     margin-bottom: 35px;
 }
 
 /****** BOTTOM SECTION ******/
 
 #bot-sec .third-width {
-    height: 160px;
     padding: 30px;
 }
 
 #bot-sec .third-width h3 {
-    font-size: 12px;
-    line-height: 25px;
+    font-size: 0.75em;
+    line-height: 1.563em;
     margin: 0;
     text-transform: uppercase;
 }
@@ -96,14 +96,14 @@ nav ul li a {
 
 #bot-sec .third-width ul li a {
     color: #77a466;
-    font-size: 16px;
-    line-height: 40px;
+    font-size: 1em;
+    line-height: 2.5em;
     text-decoration: none;
 }
 
 #bot-sec .third-width p {
-    font-size: 16px;
-    line-height: 21px;
+    font-size: 1em;
+    line-height: 1.313em;
     margin-bottom: 0;
 }
 
@@ -119,9 +119,9 @@ nav ul li a {
 /****** FOOTER ******/
 
 footer p {
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 700;
-    line-height: 23px;
+    line-height: 1.438em;
     margin: 25px auto;
     text-align: center;
     text-transform: uppercase;
